--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tusur timetable API on NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node dist/index.js"
   },
   "author": "TemA",
   "license": "ISC",
